changed cookie consent banner

--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <!-- Begin Cookie Consent plugin by Silktide - http://silktide.com/cookieconsent -->
+    <script type="text/javascript">
+        window.cookieconsent_options = {"message":"Makuliassa käytetään keksejä, sillä ne parantavat käyttökokemusta! :)","dismiss":"Selvä!","learnMore":"Lisätietoa","link":null,"theme":"dark-bottom"};
+    </script>
+
+<!--
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
     <script>
@@ -92,7 +98,7 @@
         }
       }
     })});
-    </script>
+    </script> -->
 
 </head>
 
