--- a/index.html
+++ b/index.html
@@ -78,9 +78,28 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <!-- Begin Cookie Consent plugin by Silktide - http://silktide.com/cookieconsent -->
-    <script type="text/javascript">
-        window.cookieconsent_options = {"message":"Makuliassa käytetään keksejä, sillä ne parantavat käyttökokemusta! :)","dismiss":"Selvä!","learnMore":"Lisätietoa","link":null,"theme":"dark-bottom"};
+    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.css" />
+    <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.js"></script>
+    <script>
+    window.addEventListener("load", function(){
+    window.cookieconsent.initialise({
+      "palette": {
+        "popup": {
+          "background": "#efefef",
+          "text": "#404040"
+        },
+        "button": {
+          "background": "#8ec760",
+          "text": "#ffffff"
+        }
+      },
+      "theme": "edgeless",
+      "content": {
+        "message": "Makuliassa käytetään keksejä - niillä parannetaan käyttökokemustasi! :)",
+        "dismiss": "Selvä!",
+        "link": "Lisätietoja"
+      }
+    })});
     </script>
 
 <!--
