added yogurt and early bird offer to the landing page

--- a/index.html
+++ b/index.html
@@ -160,15 +160,15 @@
             <img class="img-responsive visible-xs-block" src="img/vuori-kuumailmapallo-panoraama-mobile-toim.jpg">
             <img class="img-responsive hidden-xs hidden-sm hidden-md hidden-lg" src="img/mozzarellaa-pinja.jpg">
 
-<!--
+
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 text-center">
-                        <h3>Tilaa 9.9. mennessä - saat lahjaksi puhvelinmaitojogurttia</h3>
-                        <p class="text-muted">Lisään kaupan päälle jokaista ostamaasi juustokiloa kohti annoksen kermaista puhvelinmaidosta tehtyä jogurttia!</p>
-                        <p class="text-muted">Tarjous on voimassa 2.-9.9.2018</p>
+                    <h3>Tilaa 7.10. mennessä - saat lahjaksi puhvelinmaitojogurttia</h3>
+                    <p class="text-muted">Lisään kaupan päälle jokaista ostamaasi juustokiloa kohti annoksen kermaista puhvelinmaidosta tehtyä jogurttia!</p>
+                    <p class="text-muted">Tarjous on voimassa 29.9.-7.10.2018</p>
                 </div>
             </div>
--->
+
             <div class="container" id="kauppa">
 
                 <div class="col-lg-4 col-md-6 text-center">
@@ -289,8 +289,32 @@
                     </div>
                 </div>
                 
-
                 <div class="clearfix hidden-md"></div>
+
+                <div class="col-lg-4 col-lg-offset-4 col-md-6">
+                    <div class="service-box">
+                        <div class="text-center">
+                            <a class="no-hover" href="https://shop.makulia.fi/shop/yogurt/"><img src="img/products/jogurtti-naturale.jpg" class="img-responsive" alt="Kuva: puhvelinmaitojogurtti">
+                            <h3>Yogurt di Bufala Naturale</h3>
+                            <p class="text-muted">Puhvelinmaidosta valmistettu maustamaton jogurtti - à 110 g</p></a>
+                            <a href="https://shop.makulia.fi/shop/yogurt/" class="more-link">Lue lisää</a>
+                        </div>
+                        <div>
+                            <article>
+                                <img class="amount-icon col-xs-3" src="img/products/yogurt-icon-1.svg" alt="1 jogurttipurkki">
+                                <p class="text-muted">1 kpl - 2,90 €</p></a>
+                                <a href="http://shop.makulia.fi/cart/?add-to-cart=531" class="addtocart hidden-xs">Lisää koriin</a>
+                                <a href="http://shop.makulia.fi/cart/?add-to-cart=531" class="more-link visible-xs col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
+                            </article>
+                            <article>
+                                <img class="amount-icon col-xs-3" src="img/products/yogurt-icon-2.svg" alt="2 jogurttipurkkia">
+                                <p class="text-muted">2 kpl - 5,80 €</p></a>
+                                <a href="http://shop.makulia.fi/cart/?add-to-cart=531&quantity=2" class="addtocart hidden-xs">Lisää koriin</a>
+                                <a href="http://shop.makulia.fi/cart/?add-to-cart=531&quantity=2" class="more-link visible-xs col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
+                            </article>
+                        </div> 
+                    </div>
+                </div>
 
                 <div class="col-xs-12">
                     <hr class="light">
