--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 text-center">
                     <h3>Tilaa 7.10. mennessä - saat lahjaksi puhvelinmaitojogurttia</h3>
-                    <p class="text-muted">Lisään kaupan päälle jokaista ostamaasi juustokiloa kohti annoksen kermaista puhvelinmaidosta tehtyä jogurttia!</p>
+                    <p class="text-muted">Lisään tilaukseesi kaupan päälle jokaista ostamaasi juustokiloa kohti annoksen kermaista puhvelinmaidosta tehtyä jogurttia! Sinun ei tarvitse lisätä jogurttia ostoskoriisi, ellet halua ostaa useampaa.</p>
                     <p class="text-muted">Tarjous on voimassa 29.9.-7.10.2018</p>
                 </div>
             </div>
