added new hidden img for fb

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <img class="img-responsive hidden-xs" src="img/vuori-kuumailmapallo-panoraama-toim.jpg">
             <img class="img-responsive visible-xs-block" src="img/vuori-kuumailmapallo-panoraama-mobile-toim.jpg">
             <img class="img-responsive hidden-xs hidden-sm hidden-md hidden-lg" src="img/mozzarellaa-pinja.jpg">
-
+            <img class="img-responsive hidden-xs hidden-sm hidden-md hidden-lg" src="img/tammenterhomozzarella.jpg">
 
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 text-center">
