corrected a typo in Seljas testimonial

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 <div class="col-md-6 hidden-lg">
                     <div class="service-box padding-top">
                         <p class="black text-left"><i class="fa fa-quote-right font-40" aria-hidden="true"></i></p>
-                        <p class="text-center black"> Aivan ihanan savuinen maku, kuin olisi saanut suuhunsa nuotion savun makuisen haukkapalaksi juustosta. Heti piti tehdä oliiviöljystä, revityistä pikkutomaateista, valkosipulista, basilikasta sekä ripauksesta suolaa mainio salaatti mozzarellalle ja leivälle. Aaaaahhh! <i class="fa fa-quote-right pieni text-muted" aria-hidden="true"></i></p>
+                        <p class="text-center black"> Aivan ihanan savuinen maku, kuin olisi saanut suuhunsa nuotion savun makuisen haukkapalan juustosta. Heti piti tehdä oliiviöljystä, revityistä pikkutomaateista, valkosipulista, basilikasta sekä ripauksesta suolaa mainio salaatti mozzarellalle ja leivälle. Aaaaahhh! <i class="fa fa-quote-right pieni text-muted" aria-hidden="true"></i></p>
                         <p class="quote-name">Selja</p>
                         <p class="text-muted text-right"><small><a href="https://shop.makulia.fi/shop/mozzarella-affumicata-1kg/" target="_blank">Savustetusta mozzarellasta</a></small></p>
                     </div>
@@ -342,7 +342,7 @@
                     <div class="service-box padding-top">
                         <div class="padding-top">
                             <p class="black text-left"><i class="fa fa-quote-right font-40" aria-hidden="true"></i></p>
-                            <p class="text-center black"> Aivan ihanan savuinen maku, kuin olisi saanut suuhunsa nuotion savun makuisen haukkapalaksi juustosta. Heti piti tehdä oliiviöljystä, revityistä pikkutomaateista, valkosipulista, basilikasta sekä ripauksesta suolaa mainio salaatti mozzarellalle ja leivälle. Aaaaahhh! <i class="fa fa-quote-right pieni text-muted" aria-hidden="true"></i></p>
+                            <p class="text-center black"> Aivan ihanan savuinen maku, kuin olisi saanut suuhunsa nuotion savun makuisen haukkapalan juustosta. Heti piti tehdä oliiviöljystä, revityistä pikkutomaateista, valkosipulista, basilikasta sekä ripauksesta suolaa mainio salaatti mozzarellalle ja leivälle. Aaaaahhh! <i class="fa fa-quote-right pieni text-muted" aria-hidden="true"></i></p>
                             <p class="quote-name">Selja</p>
                             <p class="text-muted text-right"><small><a href="https://shop.makulia.fi/shop/mozzarella-affumicata-1kg/" target="_blank">Savustetusta mozzarellasta</a></small></p>
                         </div>
