removed the offer and modifien i read more texts

--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
             <img class="img-responsive hidden-xs hidden-sm hidden-md hidden-lg" src="img/mozzarellaa-pinja.jpg">
             <img class="img-responsive hidden-xs hidden-sm hidden-md hidden-lg" src="img/tammenterhomozzarella.jpg">
 
+            <!--
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 text-center">
                     <h3>Tilaa 7.10. mennessä - saat lahjaksi puhvelinmaitojogurttia</h3>
@@ -168,6 +169,7 @@
                     <p class="text-muted">Tarjous on voimassa 29.9.-7.10.2018</p>
                 </div>
             </div>
+            -->
 
             <div class="container" id="kauppa">
 
@@ -242,7 +244,7 @@
                             </article>
                         </div>
                         <div class="text-center padding-bottom">
-                            <a href="https://shop.makulia.fi/shop/mozzarella-affumicata-500-g/" class="more-link"><i class="fa fa-info-circle red" aria-hidden="true"></i> Ihana savumozzarella</a>
+                            <a href="https://shop.makulia.fi/shop/mozzarella-affumicata-500-g/" class="more-link"><i class="fa fa-info-circle red" aria-hidden="true"></i> Lue lisää ihanasta savumozzarellasta</a>
                         </div>                       
                     </div>
                 </div>
@@ -289,7 +291,7 @@
                             </article>
                         </div>
                         <div class="text-center padding-bottom">
-                            <a href="https://shop.makulia.fi/shop/ricotta/" class="more-link"><i class="fa fa-info-circle red" aria-hidden="true"></i> Lempeä ricottajuusto</a>
+                            <a href="https://shop.makulia.fi/shop/ricotta/" class="more-link"><i class="fa fa-info-circle red" aria-hidden="true"></i> Lue lisää lempeästä ricottajuustosta</a>
                         </div>
                     </div>
                 </div>
@@ -333,7 +335,7 @@
                             </article>
                         </div> 
                         <div class="text-center padding-bottom">
-                            <a href="https://shop.makulia.fi/shop/yogurt/" class="more-link"><i class="fa fa-info-circle red" aria-hidden="true"></i> Kermainen puhvelijogurtti</a>
+                            <a href="https://shop.makulia.fi/shop/yogurt/" class="more-link"><i class="fa fa-info-circle red" aria-hidden="true"></i> Lue lisää kermaisesta puhvelijogurtista</a>
                         </div>
                     </div>
                 </div>
