changed the cookien consent bar so that it should work well in mobiles too

--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
           "text": "#ffffff"
         }
       },
-      "theme": "edgeless",
+      "theme": "classic",
+      "position": "bottom-left",
       "content": {
         "message": "Makuliassa käytetään keksejä - niillä parannetaan käyttökokemustasi! :)",
         "dismiss": "Selvä!",
