--- a/index.html
+++ b/index.html
@@ -162,15 +162,15 @@
             <img class="img-responsive hidden-xs hidden-sm hidden-md hidden-lg" src="img/mozzarellaa-pinja.jpg">
             <img class="img-responsive hidden-xs hidden-sm hidden-md hidden-lg" src="img/tammenterhomozzarella.jpg">
 
-            <!--
+            
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 text-center">
-                    <h3>Tilaa 7.10. mennessä - saat lahjaksi puhvelinmaitojogurttia</h3>
-                    <p class="text-muted">Lisään tilaukseesi kaupan päälle jokaista ostamaasi juustokiloa kohti annoksen kermaista puhvelinmaidosta tehtyä jogurttia! Sinun ei tarvitse lisätä jogurttia ostoskoriisi, ellet halua ostaa useampaa.</p>
-                    <p class="text-muted">Tarjous on voimassa 29.9.-7.10.2018</p>
+                    <h3>Tilaa 4.11. mennessä - saat lahjaksi puhvelinmaitojogurttia</h3>
+                    <p class="text-muted">Lisään tilaukseesi kaupan päälle annoksen kermaista puhvelinmaidosta tehtyä jogurttia, kun tilaat vähintään 1 kg verran tuotteita! Jos tilaat kaksi kiloa, saat myös kaksi jogurttia. Sinun ei tarvitse lisätä jogurttia ostoskoriisi, ellet halua ostaa useampaa.</p>
+                    <p class="text-muted">Tarjous on voimassa 29.10.-4.11.2018</p>
                 </div>
             </div>
-            -->
+            
 
             <div class="container" id="kauppa">
 
