changed header img and added info about the next delivery

--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
 
     <header class="temporary">
         <div class="temp">
-            <img class="img-responsive hidden-xs" src="img/vuori-kuumailmapallo-panoraama-toim.jpg">
-            <img class="img-responsive visible-xs-block" src="img/vuori-kuumailmapallo-panoraama-mobile-toim.jpg">
+            <img class="img-responsive hidden-xs" src="img/vuori-kuumailmapallo-panoraama.jpg">
+            <img class="img-responsive visible-xs-block" src="img/vuori-kuumailmapallo-panoraama-mobile.jpg">
             <img class="img-responsive hidden-xs hidden-sm hidden-md hidden-lg" src="img/maailmankello-mozzarella-maanantai-link-opt.jpg">
             <img class="img-responsive hidden-xs hidden-sm hidden-md hidden-lg" src="img/ensimozzarella-linkki-optimoitu.jpg">
             <img class="img-responsive hidden-xs hidden-sm hidden-md hidden-lg" src="img/ensimozzarella-linkki-optimoitu-pinja.jpg">
@@ -173,6 +173,14 @@
                 </div>
             </div>
             -->
+
+            <div class="container">
+                <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 text-center">
+                    <h3>Marraskuun tilausaika on päättynyt - seuraava toimitus joulukuussa</h3>
+                    <p class="text-muted">Joulukuun toimituspäivä on torstai 20.12. ja tilauksen voi noutaa torstaina tai perjantaina sopimuksen mukaan. Jouluksi on tulossa myös erikoiserä vastapuristettua ekstra-neitsytoliiviöljyä, tuoreita pähkinöitä ja muuta herkkua! Lisätietoa tulossa joulukuun aikana.</p>
+                    <p class="text-muted">Tilaa herkut joulupöytään su 16.12. mennessä!</p>
+                </div>
+            </div>
 
             <div class="container" id="kauppa">
 
