--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 text-center">
-                    <h3>Marraskuun tilausaika on päättynyt - seuraava toimitus joulukuussa</h3>
+                    <h3>Seuraava toimitus joulukuussa</h3>
                     <p class="text-muted">Joulukuun toimituspäivä on torstai 20.12. ja tilauksen voi noutaa torstaina tai perjantaina sopimuksen mukaan. Jouluksi on tulossa myös erikoiserä vastapuristettua ekstra-neitsytoliiviöljyä, tuoreita pähkinöitä ja muuta herkkua! Lisätietoa tulossa joulukuun aikana.</p>
                     <p class="text-muted">Tilaa herkut joulupöytään su 16.12. mennessä!</p>
                 </div>
