added crema di aglio

--- a/index.html
+++ b/index.html
@@ -529,6 +529,24 @@
                     </div>   
                 </div>
             </div>
+
+            <div class="col-md-6 col-md-offset-3 text-center">
+                <div class="service-box padding-bottom">
+                    <div class="col-xs-12">
+                        <a class="no-hover black" href="https://shop.makulia.fi/shop/valkosipulitahna-crema-di-aglio/">
+                            <img src="img/products/crema-aglio-s.jpg" class="img-responsive col-xs-4" alt="valkosipulitahna">
+                        <h3 class="col-xs-8">Valkosipulitahna, karkea</h3></a>
+                    </div>
+                    <div class="col-xs-12 padding-bottom">
+                        <article>
+                            <a href="https://shop.makulia.fi/shop/valkosipulitahna-crema-di-aglio/" target="_blank" class="more-link"><i class="fa fa-info-circle red" aria-hidden="true"></i> Lue lisää</a>
+                            <p class="text-muted">212 g - 14,50 €</p>
+                            <a href="http://shop.makulia.fi/cart/?add-to-cart=756" class="col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
+                        </article>
+                    </div>   
+                </div>
+            </div>
+
         </div>
         <hr class="primary">
     </section>
