changed the header and the delivery text

--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@
 
     <header class="temporary">
         <div class="temp">
-            <img class="img-responsive hidden-xs" src="img/vuori-kuumailmapallo-panoraama.jpg">
-            <img class="img-responsive visible-xs-block" src="img/vuori-kuumailmapallo-panoraama-mobile.jpg">
+            <!--<img class="img-responsive hidden-xs" src="img/vuori-kuumailmapallo-panoraama.jpg">
+            <img class="img-responsive visible-xs-block" src="img/vuori-kuumailmapallo-panoraama-mobile.jpg">-->
+            <img class="img-responsive hidden-xs" src="img/header-joulu.jpg">
+            <img class="img-responsive visible-xs-block" src="img/header-joulu-mobile.jpg">
             <img class="img-responsive hidden-xs hidden-sm hidden-md hidden-lg" src="img/maailmankello-mozzarella-maanantai-link-opt.jpg">
-            <img class="img-responsive hidden-xs hidden-sm hidden-md hidden-lg" src="img/ensimozzarella-linkki-optimoitu.jpg">
-            <img class="img-responsive hidden-xs hidden-sm hidden-md hidden-lg" src="img/ensimozzarella-linkki-optimoitu-pinja.jpg">
             <img class="img-responsive hidden-xs hidden-sm hidden-md hidden-lg" src="img/mozzarellaa-pinja.jpg">
 
             <!--
@@ -179,8 +179,8 @@
 
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 text-center">
-                    <h3>Seuraava toimitus joulukuussa</h3>
-                    <p class="text-muted">Joulukuun toimituspäivä on torstai 20.12. ja tilauksen voi noutaa torstaina tai perjantaina sopimuksen mukaan. Jouluksi on tulossa myös erikoiserä vastapuristettua ekstra-neitsytoliiviöljyä, tuoreita pähkinöitä ja muuta herkkua! Lisätietoa tulossa joulukuun aikana.</p>
+                    <h3>Toimitus joulukuussa</h3>
+                    <p class="text-muted">Joulukuun toimituspäivä on torstai 20.12. ja tilauksen voi noutaa torstaina tai perjantaina sopimuksen mukaan.</p>
                     <p class="red">HUOM! Tilaa erikoiserän herkut su 9.12. mennessä! Juustoja voi tilata 16.12. saakka.</p>
                 </div>
             </div>
