removed christmas selezione

--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 text-center">
                     <h3>Toimitus joulukuussa</h3>
-                    <p class="text-muted">Joulukuun toimituspäivä on torstai 20.12. ja tilauksen voi noutaa torstaina tai perjantaina sopimuksen mukaan.</p>
-                    <p class="red">HUOM! Tilaa erikoiserän herkut su 9.12. mennessä! Juustoja voi tilata 16.12. saakka.</p>
+                    <p class="text-muted">Joulukuun toimituspäivä on torstai 20.12. ja tilauksen voi noutaa torstaina tai perjantaina sopimuksen mukaan. Oliiviöljyn ja pähkinöiden tilaus on sulkeutunut 9.12. - ota yhteyttä, jos olisit halunnut vielä oliiviöljyä.</p>
+                    <p class="red">Tee tilauksesi su 16.12. mennessä, niin se ehtii joulun toimitukseen.</p>
                 </div>
             </div>
         </div>
@@ -196,7 +196,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-3 col-md-6 text-center">
+            <div class="col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 text-center">
                 <div class="service-box padding-bottom">
                     <div class="text-center">
                         <a class="no-hover black" href="https://shop.makulia.fi/shop/letitetty-mozzarella-treccia-500g/"><img src="img/products/2-treccia-500g.jpg" class="img-responsive" alt="Letitetty mozzarella treccia">
@@ -216,11 +216,12 @@
                         </article>
                     </div>
                     <div class="text-center">
-                        <a href="https://shop.makulia.fi/shop/letitetty-mozzarella-treccia-500g/" target="_blank" class="more-link"><i class="fa fa-info-circle red" aria-hidden="true"></i> Lue lisää treccia-mozzarellasta</a>
+                        <a href="https://shop.makulia.fi/shop/letitetty-mozzarella-treccia-500g/" target="_blank" class="more-link"><i class="fa fa-info-circle red" aria-hidden="true"></i> Lue lisää mozzarellaletistä</a>
                     </div>
                 </div>
             </div>
 
+            <!--
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box padding-bottom">
                     <div class="text-center">
@@ -250,7 +251,6 @@
                     </div>
                     <div>
                         <article>
-                            <!--<img class="amount-icon col-xs-3" src="img/products/.svg" alt="Hasselpähkinöitä">-->
                             <p class="text-muted">1 kg - 21,90 €</p>
                             <a href="http://shop.makulia.fi/cart/?add-to-cart=719" class="col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
                         </article> 
@@ -269,7 +269,6 @@
                     </div>
                     <div>
                         <article>
-                            <!--<img class="amount-icon col-xs-3" src="img/products/.svg" alt="1 kg saksanpähkinöitä">-->
                             <p class="text-muted">1 kg - 22,90 €</p>
                             <a href="http://shop.makulia.fi/cart/?add-to-cart=720" class="col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
                         </article>  
@@ -545,7 +544,7 @@
                         </article>
                     </div>   
                 </div>
-            </div>
+            </div>-->
 
         </div>
         <hr class="primary">
@@ -582,7 +581,7 @@
                                 <a href="http://shop.makulia.fi/cart/?add-to-cart=151" class="addtocart hidden-xs">Lisää koriin</a>
                                 <a href="http://shop.makulia.fi/cart/?add-to-cart=151" class="more-link visible-xs col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
                             </article>
-
+                            <!--
                             <article>
                                 <img class="amount-icon col-xs-3" src="img/products/treccia-icon-500g-bagx.svg" alt="1 kpl treccia-mozzarellaa à 500 g">
                                 <p class="text-muted">500 g - 19,50 €</p>
@@ -593,7 +592,7 @@
                                 <img class="amount-icon col-xs-3" src="img/products/treccia-icon-1kg-bagx.svg" alt="1 kpl treccia-mozzarellaa à 1 kg">
                                 <p class="text-muted">1 kg - 34,90 €</p>
                                 <a href="http://shop.makulia.fi/cart/?add-to-cart=657" class="col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
-                            </article>
+                            </article>-->
                         
                         </div>
                         <div class="text-center padding-bottom">
