corrected the position of christmas products

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 text-center">
+            <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box padding-bottom">
                     <div class="text-center">
                         <a class="no-hover black" href="https://shop.makulia.fi/shop/letitetty-mozzarella-treccia-500g/"><img src="img/products/2-treccia-500g.jpg" class="img-responsive" alt="Letitetty mozzarella treccia">
