loppuunmyyty olive oil

--- a/index.html
+++ b/index.html
@@ -228,11 +228,14 @@
                         <h3>Olio Extra Vergine di Oliva<br><small>Vastapuristettua ekstra-neitsytoliiviöljyä</small></h3></a>
                     </div>
                     <div>
+                        <p class="red">Loppuunmyyty</p>
+                        <!--
                         <article>
                             <img class="amount-icon col-xs-3" src="img/products/oliivioljy-kanisteri-icon.svg" alt="1 l ekstra-neitsytoliiviöljyä">
                             <p class="text-muted">1 l - 22,90 €</p>
                             <a href="http://shop.makulia.fi/cart/?add-to-cart=660" class="col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
                         </article>
+                    -->
                     </div>
                     <div class="text-center">
                         <a href="https://shop.makulia.fi/shop/vastapuristettu-ekstra-neitsytoliivioljy/" target="_blank" class="more-link"><i class="fa fa-info-circle red" aria-hidden="true"></i> Lue lisää vastapuristetusta oliiviöljystä</a>
