added scorzette di arancia, changed the delivery text

--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 text-center">
                     <h3>Toimitus joulukuussa</h3>
                     <p class="text-muted">Joulukuun toimituspäivä on torstai 20.12. ja tilauksen voi noutaa torstaina tai perjantaina sopimuksen mukaan.</p>
-                    <p class="red">Tee tilauksesi su 16.12. mennessä, niin se ehtii joulun toimitukseen.</p>
+                    <p class="red">Su 16.12. mennessä tehdyt tilaukset saapuvat 20.12. (17.-19.12. tilatut pähkinät, valkosipulitahnat ja suklaa-appelsiininkuoret voi noutaa joulukuun toimituspäivinä)</p>
+                    <p class="text-muted">17.12. lähtien tehdyt juusto- ja jogurttitilaukset toimitetaan noutopisteeseen 18.1.</p>
                 </div>
             </div>
         </div>
@@ -283,7 +284,7 @@
 
             <div class="clearfix"></div>
             
-            <div class="col-md-6 col-md-offset-3 text-center">
+            <div class="col-md-6 text-center">
                 <div class="service-box padding-bottom">
                     <div class="col-xs-12">
                         <a class="no-hover black" href="https://shop.makulia.fi/shop/valkosipulitahna-crema-di-aglio/">
@@ -295,6 +296,23 @@
                             <a href="https://shop.makulia.fi/shop/valkosipulitahna-crema-di-aglio/" target="_blank" class="more-link"><i class="fa fa-info-circle red" aria-hidden="true"></i> Lue lisää</a>
                             <p class="text-muted">212 g - 14,50 €</p>
                             <a href="http://shop.makulia.fi/cart/?add-to-cart=756" class="col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
+                        </article>
+                    </div>   
+                </div>
+            </div>
+
+            <div class="col-md-6 text-center">
+                <div class="service-box padding-bottom">
+                    <div class="col-xs-12">
+                        <a class="no-hover black" href="https://shop.makulia.fi/shop/suklaakuorrutteiset-appelsiininkuoret-scorzette-di-arancia/">
+                            <img src="img/products/scorzette-arancia.jpg" class="img-responsive col-xs-4" alt="valkosipulitahna">
+                        <h3 class="col-xs-8">Suklaakuorrutteiset appelsiininkuoret</h3></a>
+                    </div>
+                    <div class="col-xs-12 padding-bottom">
+                        <article>
+                            <a href="https://shop.makulia.fi/shop/suklaakuorrutteiset-appelsiininkuoret-scorzette-di-arancia/" target="_blank" class="more-link"><i class="fa fa-info-circle red" aria-hidden="true"></i> Lue lisää</a>
+                            <p class="text-muted">100 g - 6,50 €</p>
+                            <a href="http://shop.makulia.fi/cart/?add-to-cart=824" class="col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
                         </article>
                     </div>   
                 </div>
