added gift card, mirto and moved treccia, modified delivery text

--- a/index.html
+++ b/index.html
@@ -179,10 +179,9 @@
 
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 text-center">
-                    <h3>Toimitus joulukuussa</h3>
-                    <p class="text-muted">Joulukuun toimituspäivä on torstai 20.12. ja tilauksen voi noutaa torstaina tai perjantaina sopimuksen mukaan.</p>
-                    <p class="red">Su 16.12. mennessä tehdyt tilaukset saapuvat 20.12. (17.-19.12. tilatut pähkinät, valkosipulitahnat ja suklaa-appelsiininkuoret voi noutaa joulukuun toimituspäivinä)</p>
-                    <p class="text-muted">17.12. lähtien tehdyt juusto- ja jogurttitilaukset toimitetaan noutopisteeseen 18.1.</p>
+                    <h3>Tulevat toimitukset</h3>
+                    <p class="red">Su 16.12. mennessä tehdyt tilaukset saapuvat 20.12. (17.-19.12. tilatut pähkinät, valkosipulitahnat ja suklaa-appelsiininkuoret voi noutaa vielä joulukuussa 20.-21.12.)</p>
+                    <p class="text-muted">17.12. jälkeen tehdyt juusto- ja jogurttitilaukset ovat noudettavissa 18.1. lähtien.</p>
                 </div>
             </div>
         </div>
@@ -200,24 +199,12 @@
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box padding-bottom">
                     <div class="text-center">
-                        <a class="no-hover black" href="https://shop.makulia.fi/shop/letitetty-mozzarella-treccia-500g/"><img src="img/products/2-treccia-500g.jpg" class="img-responsive" alt="Letitetty mozzarella treccia">
-                        <h3>Treccia - Letti<br><small>Mozzarella di Bufala Campana</small></h3></a>
+                        <a class="no-hover black" href="https://shop.makulia.fi/shop/lahjakortti/"><img src="img/products/lahjakortti-1x.jpg" class="img-responsive" alt="Letitetty mozzarella treccia">
+                        <h3>Lahjakortti<br><small>Anna lahjaksi makuelämys</small></h3></a>
                     </div>
-                    <div>
-                        <article>
-                            <img class="amount-icon col-xs-3" src="img/products/treccia-icon-500g-bagx.svg" alt="1 kpl treccia-mozzarellaa à 500 g">
-                            <p class="text-muted">500 g - 19,50 €</p>
-                            <a href="http://shop.makulia.fi/cart/?add-to-cart=654" class="col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
-                        </article>
-
-                        <article>
-                            <img class="amount-icon col-xs-3" src="img/products/treccia-icon-1kg-bagx.svg" alt="1 kpl treccia-mozzarellaa à 1 kg">
-                            <p class="text-muted">1 kg - 34,90 €</p>
-                            <a href="http://shop.makulia.fi/cart/?add-to-cart=657" class="col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
-                        </article>
-                    </div>
+                    <p class="text-muted padding-bottom">20 € - 100 €</p>
                     <div class="text-center">
-                        <a href="https://shop.makulia.fi/shop/letitetty-mozzarella-treccia-500g/" target="_blank" class="more-link"><i class="fa fa-info-circle red" aria-hidden="true"></i> Lue lisää mozzarellaletistä</a>
+                        <a href="https://shop.makulia.fi/shop/lahjakortti/" target="_blank" class="more-link"><i class="fa fa-shopping-cart red" aria-hidden="true"></i> Valitse kortin arvo ja osta</a>
                     </div>
                 </div>
             </div>
@@ -305,7 +292,7 @@
                 <div class="service-box padding-bottom">
                     <div class="col-xs-12">
                         <a class="no-hover black" href="https://shop.makulia.fi/shop/suklaakuorrutteiset-appelsiininkuoret-scorzette-di-arancia/">
-                            <img src="img/products/scorzette-arancia.jpg" class="img-responsive col-xs-4" alt="valkosipulitahna">
+                            <img src="img/products/scorzette-arancia.jpg" class="img-responsive col-xs-4" alt="suklaa-appelsiininkuoret">
                         <h3 class="col-xs-8">Suklaakuorrutteiset appelsiininkuoret</h3></a>
                     </div>
                     <div class="col-xs-12 padding-bottom">
@@ -317,6 +304,44 @@
                     </div>   
                 </div>
             </div>
+
+            <div class="clearfix"></div>
+
+            <div class="col-md-6 text-center">
+                <div class="service-box padding-bottom">
+                    <div class="col-xs-12">
+                        <a class="no-hover black" href="https://shop.makulia.fi/shop/myrtin-lehdet-foglie-di-mirto/">
+                            <img src="img/products/mirto-foglie.jpg" class="img-responsive col-xs-4" alt="Myrtin lehtiä lasipurkissa">
+                        <h3 class="col-xs-8">Kuivattuja välimerenmyrtin lehtiä</h3></a>
+                    </div>
+                    <div class="col-xs-12 padding-bottom">
+                        <article>
+                            <a href="https://shop.makulia.fi/shop/myrtin-lehdet-foglie-di-mirto/" target="_blank" class="more-link"><i class="fa fa-info-circle red" aria-hidden="true"></i> Lue lisää</a>
+                            <p class="text-muted">7 g - 7 €</p>
+                            <a href="http://shop.makulia.fi/cart/?add-to-cart=832" class="col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
+                        </article>
+                    </div>   
+                </div>
+            </div>
+
+            <div class="col-md-6 text-center">
+                <div class="service-box padding-bottom">
+                    <div class="col-xs-12">
+                        <a class="no-hover black" href="https://shop.makulia.fi/shop/myrtin-marjat-bacche-di-mirto/">
+                            <img src="img/products/mirto-bacche2.jpg" class="img-responsive col-xs-4" alt="Myrtin marjoja lasipurkissa">
+                        <h3 class="col-xs-8">Kuivattuja välimerenmyrtin marjoja</h3></a>
+                    </div>
+                    <div class="col-xs-12 padding-bottom">
+                        <article>
+                            <a href="https://shop.makulia.fi/shop/myrtin-marjat-bacche-di-mirto/" target="_blank" class="more-link"><i class="fa fa-info-circle red" aria-hidden="true"></i> Lue lisää</a>
+                            <p class="text-muted">80 g - 11,00 €</p>
+                            <a href="http://shop.makulia.fi/cart/?add-to-cart=830" class="col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
+                        </article>
+                    </div>   
+                </div>
+            </div>
+
+            <div class="clearfix"></div>
 
         </div>
         <hr class="primary">
@@ -471,9 +496,6 @@
                             <p class="text-center black"> Puhvelimozzarella oli aivan yllättävä makukokemus. En uskonutkaan miten maukasta tuore aito mozzarella voi olla. Ihana italialainen maalaistuote. Tätä tahtoo lisää! <i class="fa fa-quote-right pieni text-muted" aria-hidden="true"></i></p>
                             <p class="quote-name">Hans Christian</p>
                             <p class="text-muted text-right"><small><a href="https://www.facebook.com/makupaketti/" target="_blank">Makulian mozzarellasta Facebookissa </a></small></p>
-                            <!--
-                            <p class="text-muted text-right"><small><a href="https://www.facebook.com/makupaketti/" target="_blank">Antoi Makulialle <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></a></small></p>
-                            -->
                         </div>
                     </div>
                 </div>
@@ -513,6 +535,31 @@
                             <p class="text-center black"> Aivan ihanan savuinen maku, kuin olisi saanut suuhunsa nuotion savun makuisen haukkapalan juustosta. Heti piti tehdä oliiviöljystä, revityistä pikkutomaateista, valkosipulista, basilikasta sekä ripauksesta suolaa mainio salaatti mozzarellalle ja leivälle. Aaaaahhh! <i class="fa fa-quote-right pieni text-muted" aria-hidden="true"></i></p>
                             <p class="quote-name">Selja</p>
                             <p class="text-muted text-right"><small><a href="https://shop.makulia.fi/shop/mozzarella-affumicata-1kg/" target="_blank">Savustetusta mozzarellasta</a></small></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3">
+                    <div class="service-box padding-bottom">
+                        <div class="text-center">
+                            <a class="no-hover black" href="https://shop.makulia.fi/shop/letitetty-mozzarella-treccia-500g/"><img src="img/products/2-treccia-500g.jpg" class="img-responsive" alt="Letitetty mozzarella treccia">
+                            <h3>Treccia - Letti<br><small>Mozzarella di Bufala Campana</small></h3></a>
+                        </div>
+                        <div>
+                            <article>
+                                <img class="amount-icon col-xs-3" src="img/products/treccia-icon-500g-bagx.svg" alt="1 kpl treccia-mozzarellaa à 500 g">
+                                <p class="text-muted">500 g - 19,50 €</p>
+                                <a href="http://shop.makulia.fi/cart/?add-to-cart=654" class="col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
+                            </article>
+
+                            <article>
+                                <img class="amount-icon col-xs-3" src="img/products/treccia-icon-1kg-bagx.svg" alt="1 kpl treccia-mozzarellaa à 1 kg">
+                                <p class="text-muted">1 kg - 34,90 €</p>
+                                <a href="http://shop.makulia.fi/cart/?add-to-cart=657" class="col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
+                            </article>
+                        </div>
+                        <div class="text-center">
+                            <a href="https://shop.makulia.fi/shop/letitetty-mozzarella-treccia-500g/" target="_blank" class="more-link"><i class="fa fa-info-circle red" aria-hidden="true"></i> Lue lisää mozzarellaletistä</a>
                         </div>
                     </div>
                 </div>
