modified the delivery text

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 text-center">
                     <h3>Tulevat toimitukset</h3>
-                    <p class="red">Su 16.12. mennessä tehdyt tilaukset saapuvat 20.12. (17.-19.12. tilatut pähkinät, valkosipulitahnat ja suklaa-appelsiininkuoret voi noutaa vielä joulukuussa 20.-21.12.)</p>
+                    <p class="red">Su 16.12. mennessä tehdyt tilaukset saapuvat 20.12. ja ne voi noutaa to-pe 20.-21.12. (17.-19.12. tilatut pähkinät, valkosipulitahnat ja suklaa-appelsiininkuoret voi noutaa samoina päivinä.)</p>
                     <p class="text-muted">17.12. jälkeen tehdyt juusto- ja jogurttitilaukset ovat noudettavissa 18.1. lähtien.</p>
                 </div>
             </div>
