changed the delivery date

--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 text-center">
                     <h3>Tulevat toimitukset</h3>
-                    <p class="text-muted">Seuraava erä tuoreita juustoja ja jogurttia on noudettavissa pe 18.1. lähtien Makulian noutopisteeltä.</p>
-                    <p class="red">Tilaa 14.1. mennessä!</p>
-                    <p class="text-muted">15.1. lähtien tehdyt tilaukset toimitetaan helmikuussa.</p>
+                    <p class="text-muted">Seuraava erä tuoreita juustoja ja jogurttia on noudettavissa pe 15.2. lähtien Makulian noutopisteeltä.</p>
+                    <p class="red">Tilaa 11.2. mennessä!</p>
+                    <p class="text-muted">12.2. lähtien tehdyt tilaukset toimitetaan maaliskuussa.</p>
                 </div>
             </div>
         </div>
